Chemistry page and Index page fixed

--- a/eduspace/eduspace/templates/physics.html
+++ b/eduspace/eduspace/templates/physics.html
@@ -28,7 +28,7 @@
 				<ul>
 					<li><a href="{% url 'home' %}">Home</a></li>
 					<li><a href=" ">Physics</a></li>
-					<li><a href="#">Chemistry</a></li>
+					<li><a href="{% url 'chemistry' 6 %}">Chemistry</a></li>
 					<li><a href="#">Math</a></li>
 					<li><a href="#">About Us</a></li>
 				</ul>
