--- a/eduspace/eduspace/templates/index.html
+++ b/eduspace/eduspace/templates/index.html
@@ -1,16 +1,408 @@
 {% load staticfiles %}
 
 
-{% if subjects %}
-<ul>
+<!--
+
 	{% for subject in subjects%}
 	<li>
 		<a href="{% url 'physics'  subject.id %}">{{subject.subject}}</a>
+		
 		
 	</li>
 	
 	{%endfor%}
 
-</ul>
+-->
 
-{%endif %}
+
+<!--
+Author: W3layouts
+Author URL: http://w3layouts.com
+License: Creative Commons Attribution 3.0 Unported
+License URL: http://creativecommons.org/licenses/by/3.0/
+-->{% load staticfiles %}
+<!DOCTYPE HTML>
+<html>
+
+
+
+	<head>
+		<title>EduSpace</title>
+		<!--<link rel="shortcut icon" type="image/x-icon" href="images/pageicon.png" />-->
+		{% include 'base_html.html' %}
+		<meta name="keywords" content="Videostube iphone web template, Andriod web template, Smartphone web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+		<link href='http://fonts.googleapis.com/css?family=Ropa+Sans' rel='stylesheet' type='text/css'>
+	</head>
+	<body>
+
+	<!----start-wrap---->
+	<div class="wrap">
+		<!----start-Header---->
+		<div class="header">
+			<!----start-Logo---->
+			<div class="logo">
+				<a href="index.html"><h1>EduSpace</h1></a>
+			</div>
+			<!----End-Logo---->
+			<!----start-top-nav---->
+			
+			<div class="clear"> </div>
+			<div class="top-nav">
+				<ul>
+					<li><a href=" ">Home</a></li>
+					<li><a href=" {% url 'physics' 5 %}">Physics</a></li>
+					<li><a href="{% url 'chemistry' 6 %}">Chemistry</a></li>
+					<li><a href="#">Math</a></li>
+					<li><a href="#">About Us</a></li>
+				</ul>
+			</div>
+			<!----End-top-nav---->
+		</div>
+	
+
+		<!----End-Header---->
+		<div class="clear"> </div>
+
+	<br>	
+	<br>
+		<div class="content">
+			<div class="left-content">
+				<div class="searchbar">
+					<div class="search-left">
+						<p>Latest Video Form EduSpace</p>
+					</div>
+					<div class="search-right">
+						<form>
+							<input type="text"><input type="submit" value="" />
+						</form>
+					</div>
+					<div class="clear"> </div>
+				</div>
+				<div class="box">
+				<div class="grids">
+					<div class="grid">
+						<h3>Video No 1</h3>
+						<a href="single.html"><img src="{% static 'img/g1 copy.png' %}" title="video-name" /></a>
+						<div class="time">
+							<span>00:10</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} "title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">Force</a></p>
+							</div>
+						</div>
+					</div>
+				
+					<div class="grid">
+						<h3>Vedio No 2</h3>
+						<a href="single.html"><img src="{% static 'img/g2 copy.png' %}" title="video-name" /></a>
+						<div class="time">
+							<span>2:10</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'images/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">Magnet</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="grid">
+						<h3>Vedio No 3</h3>
+						<a href="single.html"><img src="{% static 'img/g4.jpg' %}" title="video-name" /></a>
+						<div class="time">
+							<span>10:10</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">Chem</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="clear"> </div>
+				<div class="grids">
+					<div class="grid">
+						<h3>Vedio No 4</h3>
+						<a href="single.html"><img src="{% static 'img/g3.jpg' %}" title="video-name" /></a>
+						<div class="time">
+							<span>2:30</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">Matter</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="grid">
+						<h3>Vedio No 5</h3>
+						<a href="single.html"><img src="{% static 'img/g5.jpg ' %}" title="video-name" /></a>
+						<div class="time">
+							<span>5:10</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">Chem</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="grid">
+						<h3>Vedio No 6</h3>
+						<a href="single.html"><img src="{% static 'img/g4.jpg '%}" title="video-name" /></a>
+						<div class="time">
+							<span>2:00</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">Phy</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="clear"> </div>
+				<div class="grids">
+					<div class="grid">
+						<h3>Vedio No 7</h3>
+						<a href="single.html"><img src="{% static 'img/g6.jpg' %}" title="video-name" /></a>
+						<div class="time">
+							<span>12:10</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} "title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">Force</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="grid">
+						<h3>Video No 8</h3>
+						<a href="single.html"><img src="{% static 'img/g7.jpg' %}" title="video-name" /></a>
+						<div class="time">
+							<span>20:10</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">chem</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="grid">
+						<h3>Vedio No 9</h3>
+						<a href="single.html"><img src="{% static 'img/g8.jpg' %}" title="video-name" /></a>
+						<div class="time">
+							<span>2:50</span>
+						</div>
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="single.html">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="categories.html">phy</a></p>
+							</div>
+						</div>
+					</div>
+				</div>
+				<div class="clear"> </div>
+			</div>
+			<div class="clear"> </div>
+			<ul class="dc_pagination dc_paginationA dc_paginationA03">
+						  <li><a href="#" class="first">First</a></li>
+						  <li><a href="#" class="previous">Previous</a></li>
+						  <li><a href="#">1</a></li>
+						  <li><a href="#">2</a></li>
+						  <li><a href="#" class="current">3</a></li>
+						  <li><a href="#">4</a></li>
+						  <li><a href="#">5</a></li>
+						  <li><a href="#" class="next">Next</a></li>
+						  <li><a href="#" class="last">Last</a></li>
+						  
+						</ul>
+			<div class="clear"> </div>
+		</div>
+		<div class="right-content">
+			<div class="popular">
+				<h3>Popular Videos</h3>
+				<p><img src="{% static 'img/l1.png' %}" title="likes" /></p>
+				<div class="clear"> </div>
+			</div>
+			<div class="grid1">
+						<h3>Popular Video NO 1</h3>
+						<a href="#"><img src="{% static 'img/g7.jpg' %}" title="video-name" /></a>
+						<div class="time1">
+							<span>2:50</span>
+						</div>
+						
+						<div class="grid-info">
+							<div class="video-share">
+								<ul>
+									<li><a href="#"><img src="{% static 'img/likes.png' %} " title="links" /></a></li>
+									<li><a href="#"><img src="{% static 'img/link.png' %}" title="Link" /></a></li>
+									<li><a href="#"><img src="{% static 'img/views.png' %}" title="Views" /></a></li>
+								</ul>
+							</div>
+							<div class="video-watch">
+								<a href="#">Watch Now</a>
+							</div>
+							<div class="clear"> </div>
+							<div class="lables">
+								<p>Labels:<a href="#">Phy</a></p>
+							</div>
+						</div>
+					</div>
+					<div class="clear"> </div>
+					<div class="Recent-Vodeos">
+						<h3>Recent-Videos</h3>
+						<div class="video1">
+							<img src="{% static 'img/r1.jpg' %}" title="video2" />
+							<span>Experiment No 1</span>
+							<p>It is about the force between two objects. </p>
+							<div class="clear"> </div>
+						</div>
+						<div class="video1 video2">
+							<img src="{% static 'img/r2.jpg' %}" title="video2" />
+							<span>Experiment No 2</span>
+							<p>Experimenting the chemistry behind solution </p>
+							<div class="clear"> </div>
+						</div>
+						<div class="r-all">
+							<a href="#">View All</a>
+						</div>
+					</div>
+		</div>
+		<div class="clear"> </div>
+		</div>
+		<div class="clear"> </div>
+		</div>
+		<div class="footer">
+				<div class="wrap"> 
+				
+				
+				<div class="box1">
+				<h4>Stay in touch on</h4>
+						<ul class="social">
+							<li><img src="{% static 'img/facebook.png' %}" title="facebook"><a href="#">Facebook</a></li>
+							<li><img src="{% static 'img/twitter.png' %}" title="twitter"><a href="#">Twitter</a></li>
+							<li><img src="{% static 'img/gplus.png' %}" title="google+"><a href="#">Google+</a></li>
+						</ul>
+				</div>
+				<div class="clear"> </div>
+			</div>
+		</div>
+			<div class="clear"> </div>
+			<div class="copy-right">
+			<p>&#169 2013 All rights Reserved | Design by EduSpace</p>
+		</div>
+	</div>
+	<!----End-wrap---->
+	<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script> 
+    <!--<script src="{% static 'js/bootstrap.min.js' %}"></script>-->
+  
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug--> 
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!--<script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>-->
+        
+
+	</body>
+</html>
+
+
