--- a/eduspace/eduspace/templates/physics.html
+++ b/eduspace/eduspace/templates/physics.html
@@ -49,7 +49,31 @@
 			{%endif %}
 		</div>
 
+		<div class="container">
+		  <div class="jumbotron">
+		    <h1>Bootstrap Tutorial</h1>
+		    <p>Bootstrap is the most popular HTML, CSS, and JS framework for developing
+		    responsive, mobile-first projects on the web.</p>
+		  </div>
+		  <p>This is some text.</p>
+		  <p>This is another text.</p>
+		</div>
+
 </body>
+
+<!-- Bootstrap core JavaScript
+    ================================================== -->
+    <!-- Placed at the end of the document so the pages load faster -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+
+    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery.min.js"><\/script>')</script>
+    <script src="../../dist/js/bootstrap.min.js"></script> 
+    <!--<script src="{% static 'js/bootstrap.min.js' %}"></script>-->
+  
+    <!-- IE10 viewport hack for Surface/desktop Windows 8 bug--> 
+    <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
+    <!--<script src="{% static 'js/ie10-viewport-bug-workaround.js' %}"></script>-->
 
 
 
