--- a/eduspace/eduspace/templates/indv_expl.html
+++ b/eduspace/eduspace/templates/indv_expl.html
@@ -46,6 +46,10 @@
 			{{descriptions.details}}
 
 			<br>
+{% if descriptions.topics == "Force and Pressure" %}
+<iframe width="700" height="400" src="https://www.youtube.com/embed/4OlGpS2LG_M" frameborder="0" allowfullscreen></iframe>
+{% endif %}
+
 		</div>
 
 		
